split nav, increased text size, adjust section and main

--- a/link4.html
+++ b/link4.html
@@ -1,4 +1,4 @@
-<!DOCYTPE html>
+<!DOCTYPE html>
 <html lang="en">
 
     <head>
@@ -19,6 +19,10 @@
                 <li><a href="link2.html">link 2</a></li>
                 <li><a href="link3.html">link 3</a></li>
                 <li><a href="link4.html" class="selected">link 4</a></li>
+            </ul>
+        </nav>
+        <nav>
+            <ul>
                 <li><a href="link5.html">link 5</a></li>
                 <li><a href="link6.html">link 6</a></li>
                 <li><a href="link7.html">link 7</a></li>
