--- a/link5.html
+++ b/link5.html
@@ -1,4 +1,4 @@
-<!DOCYTPE html>
+<!DOCTYPE html>
 <html lang="en">
 
     <head>
@@ -12,13 +12,16 @@
         <header>
             <h1><a href="index.html">some fabulous headline here</a></h1>
         </header>
-        
         <nav>
             <ul>
                 <li><a href="index.html">link 1</a></li>
                 <li><a href="link2.html">link 2</a></li>
                 <li><a href="link3.html">link 3</a></li>
                 <li><a href="link4.html">link 4</a></li>
+            </ul>
+        </nav>
+        <nav>
+            <ul>
                 <li><a href="link5.html" class="selected">link 5</a></li>
                 <li><a href="link6.html">link 6</a></li>
                 <li><a href="link7.html">link 7</a></li>
