--- a/link2.html
+++ b/link2.html
@@ -1,4 +1,4 @@
-<!DOCYTPE html>
+<!DOCTYPE html>
 <html lang="en">
 
     <head>
@@ -13,12 +13,16 @@
             <h1><a href="index.html">some fabulous headline here</a></h1>
         </header>
         
-        <nav>
+       <nav>
             <ul>
                 <li><a href="index.html">link 1</a></li>
                 <li><a href="link2.html" class="selected">link 2</a></li>
                 <li><a href="link3.html">link 3</a></li>
                 <li><a href="link4.html">link 4</a></li>
+            </ul>
+        </nav>
+        <nav>
+            <ul>
                 <li><a href="link5.html">link 5</a></li>
                 <li><a href="link6.html">link 6</a></li>
                 <li><a href="link7.html">link 7</a></li>
