fixed html validator errors

--- a/link3.html
+++ b/link3.html
@@ -48,9 +48,9 @@
         </main>
         
         <footer>
-            <a href="http://www.facebook.com"><img src="img/facebook.png"></a>
-            <a href="http://www.github.com"><img src="img/github.png"></a>
-            <a href="http://www.linkedin.com"><img src="img/linked-in.png"></a>
+            <a href="http://www.facebook.com"><img src="img/facebook.png" alt="facebook photo link"></a>
+            <a href="http://www.github.com"><img src="img/github.png" alt="github photo link"></a>
+            <a href="http://www.linkedin.com"><img src="img/linked-in.png" alt="linked photo link"></a>
         </footer>
         
     </body>
